@@ -51,6 +51,7 @@ RandomContact 2.1.10[Jan 2014]
 //------------------------------
 
 RandomContact 2.2.50[Nov 2014]
+ -	UI Tweaks
 
 //------------------------------
 // Version 2.3
@@ -61,3 +62,4 @@ RandomContact 2.3.0[Dec 2015]
  -	Frequent Contacts list
  -	Fixed duplication of phone numbers
  -	View contact in Address Book
+ -	Show intro for NavigationDrawer on first load
